--- a/task-harbour/src/components/ForgotPassword/forgotPassword.css
+++ b/task-harbour/src/components/ForgotPassword/forgotPassword.css
@@ -1,43 +1,98 @@
-.ForgotPassword {
-    background-color: #FAFAFA;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 60vh;
-    width: 30vw;
+body{
+  background-color: #00243C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: #00243C;
+}
+
+.ForgotPassword{
+  background-color: #FAFAFA;
+  border-radius: 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  width: 30vw;
+
+  .row{
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      gap: 1em;
+      padding: 5px 0px;
+
+
   }
-  
-  .ForgotPassword .row {
-    display: flex;
-    justify-content: center;
-    padding: 5px 0;
+
+  .copyright{
+    color: gray;
+    font-size: 15px;
+    position: absolute;
+    bottom: 5px;
   }
-  
-  .ForgotPassword .submit button {
-    padding: 1.5vh 10vw;
-    margin-top: 10px;
-    background-color: #00243C;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 15px;
-    border: none;
+  .signup{
     cursor: pointer;
+    margin-top: 15px;
+}
+
+  .submit button{
+      padding: 1.5vh 8vw;
+      margin-top: 10px;
+      background-color: #00243C;
+      color: white;
+      font-weight: bold;
+      font-size: 20px;
+      border-radius: 15px;
   }
-  
-  .ForgotPassword input {
-    padding: 7px;
-    width: 100%;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
-  }
-  
   @media (max-width: 768px) {
-    .ForgotPassword {
       width: 70vw;
-    }
   }
+/* forgot password css to be moved to login.css*/
+  .forgot-password {
+      margin-top: 15px;
+      text-align: center;
+  }
+    
+  .forgot-password a {
+      color: #007bff;
+      text-decoration: none;
+      font-size: 15px;
+  }
+    
+  .forgot-password a:hover {
+      text-decoration: underline;
+  }
+    
+}
+input:not([type="checkbox"]){
+  padding: 7px;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
+}
+
+.error{
+  background-color: gainsboro;
+  color: red;
+  font-size: 12px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 10px;
+
+  .error-btn{
+      color: black;
+  }
+
   
+}
