--- a/task-harbour/src/components/ForgotPassword/forgotPassword.css
+++ b/task-harbour/src/components/ForgotPassword/forgotPassword.css
@@ -24,8 +24,6 @@ body{
       justify-content: center;
       gap: 1em;
       padding: 5px 0px;
-
-
   }
 
   .copyright{
@@ -34,10 +32,10 @@ body{
     position: absolute;
     bottom: 5px;
   }
-  .signup{
+  .signin{
     cursor: pointer;
     margin-top: 15px;
-}
+  }
 
   .submit button{
       padding: 1.5vh 8vw;
@@ -51,7 +49,7 @@ body{
   @media (max-width: 768px) {
       width: 70vw;
   }
-/* forgot password css to be moved to login.css*/
+  /* forgot password css to be moved to login.css*/
   .forgot-password {
       margin-top: 15px;
       text-align: center;
@@ -66,7 +64,6 @@ body{
   .forgot-password a:hover {
       text-decoration: underline;
   }
-    
 }
 input:not([type="checkbox"]){
   padding: 7px;
@@ -74,25 +71,4 @@ input:not([type="checkbox"]){
   border: none;
   border-radius: 10px;
   box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
-}
-
-.error{
-  background-color: gainsboro;
-  color: red;
-  font-size: 12px;
-  font-weight: bold;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 2em;
-  margin-top: 5px;
-  padding: 5px;
-  border-radius: 10px;
-
-  .error-btn{
-      color: black;
-  }
-
-  
 }
