--- a/task-harbour/src/components/EmailVerification/emailVerification.css
+++ b/task-harbour/src/components/EmailVerification/emailVerification.css
@@ -35,6 +35,15 @@ body {
         border-radius: 15px;
     }
 
+    .resend-btn {
+        padding: 1vh 5vw;
+        margin: 10px;
+        background-color: #1b4765;
+        color: white;
+        font-size: 15px;
+        border-radius: 15px;
+    }
+
     @media (max-width: 768px) {
         width: 70vw;
     }
@@ -57,4 +66,41 @@ input:not([type="checkbox"]) {
     border: none;
     border-radius: 10px;
     box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
+}
+
+.error{
+    background-color: gainsboro;
+    color: red;
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 10px;
+
+    .error-btn{
+        color: black;
+    }
+}
+.success{
+    background-color: gainsboro;
+    color: rgb(0, 103, 17);
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 10px;
+
+    .error-btn{
+        color: black;
+    }
 }
