--- a/task-harbour/src/components/navbar/navbar.css
+++ b/task-harbour/src/components/navbar/navbar.css
@@ -1,66 +1,91 @@
-a, a:hover, a:visited, a:active {
-    color: inherit;
-    text-decoration: none;
-   }
 
-.div-icon {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
-}
-
-.dropdown{
-    position: absolute;
-    top:0;
-    left:0;
+.navbar {
+    background-color: #F4F7FA; 
+    width: 250px; 
     height: 100%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    font-family: 'Arial', sans-serif;
 }
 
-/* .dropdown:hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-    position: absolute;
-    top:0;
-    left:0;
-    height: 95%;
-    background-color: #FAFAFA;
+.navbar-header {
+    padding: 20px; /* More padding */
+    background-color: #FFFFFF; /* White background for header */
+    text-align: center; /* Center the title and menu icon */
+    border-bottom: 1px solid #E5E5E5; /* Add border */
 }
 
-.dropdown-content {
-    display: none;
-    padding: 10px;
-    background-color: #00243C;
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-    list-style-type: none;
-    width: 200px;
-    position:relative
+.navbar-header h1 {
+    color: #00243C;
+    font-size: 24px; 
+    font-weight: bold; 
+    margin: 0;
+}
+
+.navbar-content {
+    padding: 20px;
 }
 
 .newProject {
-    padding: 1.5vh 3vw;
-    /* margin-top: 10px; */
     background-color: #00243C;
-    color: white;
     font-weight: bold;
-    font-size: 20px;
-    border-radius: 15px;
+    color: white !important;
+    padding: 10px 20px;
+    margin: 10px 0 20px 0; 
+    text-align: center;
+    border-radius: 20px;
+    font-size: 18px; 
+    cursor: pointer;
+    border: none; 
+    display: block; 
 }
 
-.projectlink{
-    font-weight: normal;
-
+.newProject:hover {
+    background-color: #0f2d57; 
 }
 
-.nameAndDot{
-    display: inline-block;
+.navbar-content a {
+    padding: 10px 0;
+    text-decoration: none;
+    font-size: 18px;
+    color: #333333; /* Darker text for better readability */
+    display: block;
+    transition: 0.3s;
 }
 
-.dot {
+.navbar-content a:hover {
+    background-color: #E5E5E5; /* Light grey background on hover */
+}
+
+
+.category-title {
+    padding-top: 20px; 
+    color: #00243C;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+
+.project-link {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.project-dot {
     height: 15px;
     width: 15px;
     border-radius: 50%;
     display: inline-block;
-  }
+    margin-right: 10px;
+}
+
+
+.project-dot.project-1 { background-color: #8C9EFF; }
+.project-dot.project-2 { background-color: #FF8A80; }
+
