--- a/task-harbour/src/components/projectCreation/projectCreation.css
+++ b/task-harbour/src/components/projectCreation/projectCreation.css
@@ -7,6 +7,14 @@ body{
     color: #00243C;
 }
 
+textarea {
+    padding: 7px;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
+}
+
 .ProjectCreation{
     background-color: #FAFAFA;
     border-radius: 30px;
@@ -14,17 +22,14 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 70vh;
     width: 30vw;
 
     .row{
         align-items: center;
-        display: flex;
         justify-content: center;
         gap: 1em;
-        padding: 5px 0px;
-
-
+        padding: 10px 0px;
     }
 
     .create button{
