updated distance between cards horizontally

--- a/task-harbour/src/components/selectProject/select-project.css
+++ b/task-harbour/src/components/selectProject/select-project.css
@@ -36,8 +36,7 @@ h5{
     top:10vh;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between
-
+    justify-content: space-evenly
 }
 
 .card{
