--- a/task-harbour/src/components/taskList/taskList.css
+++ b/task-harbour/src/components/taskList/taskList.css
@@ -1,3 +1,66 @@
 .taskList{
     background-color: #FAFAFA;
+    border-radius: 10px;
+    width: 90vw;
+    z-index: 0;
+    position: relative;
+    height: 90vh;
+}
+.taskList .css-ptkaw2-MuiDataGrid-root{
+    border-style: none;
+
+}
+
+.taskLink{
+    background-color: aqua;
+    border-color : aqua;
+    /* font-family: ; */
+    font-weight: bold;
+    border-radius: 10px;
+
+}
+
+.criticalLabel{
+    background-color: red;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
+}
+
+.majorLabel{
+    background-color: orange;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
+}
+
+
+.minorLabel{
+    background-color: yellow;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
+}
+
+
+.statusLabel{
+    background-color: chartreuse;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
+}
+
+.pointsLabel{
+    /* background-color: chartreuse; */
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
+}
+
+.blankLabel{
+    /* background-color: chartreuse; */
+    align-items: center;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
 }
