--- a/task-harbour/src/components/taskList/taskList.css
+++ b/task-harbour/src/components/taskList/taskList.css
@@ -1,7 +1,7 @@
 .taskList{
     background-color: #FAFAFA;
     border-radius: 10px;
-    width: 90vw;
+    width: 88vw;
     z-index: 0;
     position: relative;
     height: 90vh;
@@ -63,4 +63,26 @@
     font-weight: bold;
     border-radius: 10px;
     padding: 1vh;
+}
+
+.taskLabel{
+    background-color: white;
+    border-style: solid;
+    border-width: 0.001vw;
+    border-color: black;
+    align-items: center;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 1vh;
+}
+
+.spacingLabel{
+    /* background-color: white; */
+    /* border-style: solid; */
+    /* border-width: 0.001vw; */
+    /* border-color: black; */
+    align-items: center;
+    font-weight: bold;
+    border-radius: 1px;
+    padding: 0.5vh;
 }
