--- a/task-harbour/src/components/taskmodal/taskmodal.css
+++ b/task-harbour/src/components/taskmodal/taskmodal.css
@@ -9,7 +9,8 @@ body {
   }
   
   .TaskCreation {
-    width: 600px; 
+    height: auto;
+    width: 60vw; 
     margin: 0 auto; 
     padding: 20px;
     border: 1px solid #ccc;
@@ -17,47 +18,53 @@ body {
     background-color: #fff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
+    .row {
+      margin-bottom: 15px;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+
+    
+    
+    .createTaskButton{
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+    }
+   
+
   }
-  
-  .row {
-    margin-bottom: 15px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  label {
+    display: block;
+    margin-bottom: 5px;
   }
-  
+
+  input,
+    select
+    {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #00243C;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      padding: 10px;
+      cursor: pointer;
+    }
+    
+    button:hover {
+      background-color: #00192E;
+    }
   /* textarea {
     width: 100%;
     height: 80px;
     resize: vertical;
   } */
   
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input,
-  select
-  {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-  }
-  .createTaskButton{
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-  }
-  button {
-    background-color: #00243C;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #00192E;
-  }
+ 
