--- a/task-harbour/src/components/taskmodal/taskmodal.css
+++ b/task-harbour/src/components/taskmodal/taskmodal.css
@@ -1,70 +1,66 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
-  .TaskCreation {
-    height: auto;
-    width: 60vw; 
-    margin: 0 auto; 
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body{
+  background-color: #00243C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: #00243C;
+}
 
-    .row {
-      margin-bottom: 15px;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
+.TaskCreation{
+  background-color: #FAFAFA;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  width: 30vw;
 
-
-    
-    
-    .createTaskButton{
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      box-sizing: border-box;
-    }
-   
-
-  }
-  label {
-    display: block;
-    margin-bottom: 5px;
+  .row{
+      align-items: center;
+      justify-content: center;
+      gap: 1em;
+      padding: 10px 0px;
   }
 
-  input,
-    select
-    {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      box-sizing: border-box;
-    }
-
-    button {
+  .create button{
+      padding: 1.5vh 5vw;
+      margin-top: 10px;
       background-color: #00243C;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      padding: 10px;
-      cursor: pointer;
-    }
-    
-    button:hover {
-      background-color: #00192E;
-    }
-  /* textarea {
-    width: 100%;
-    height: 80px;
-    resize: vertical;
-  } */
+      color: white;
+      font-weight: bold;
+      font-size: 20px;
+      border-radius: 15px;
+  }
+  @media (max-width: 768px) {
+      width: 70vw;
+  }
   
- 
+}
+
+textarea{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+select{
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+button.createTaskButton {
+  background-color: #00243C;
+  color: #fff;
+  border: none;
+  width: 100%;
+  font-weight: bold;
+  align-items: center;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px;
+
+}
+    
