--- a/task-harbour/src/components/taskList/taskList.css
+++ b/task-harbour/src/components/taskList/taskList.css
@@ -12,8 +12,8 @@
 }
 
 .taskLink{
-    background-color: aqua;
-    border-color : aqua;
+    background-color: #00243C;
+    border-color : #00243C;
     /* font-family: ; */
     font-weight: bold;
     border-radius: 10px;
