--- a/task-harbour/src/components/taskList/taskList.css
+++ b/task-harbour/src/components/taskList/taskList.css
@@ -14,6 +14,7 @@
 .taskLink{
     background-color: #00243C;
     border-color : #00243C;
+    color: white;
     /* font-family: ; */
     font-weight: bold;
     border-radius: 10px;
@@ -85,4 +86,13 @@
     font-weight: bold;
     border-radius: 1px;
     padding: 0.5vh;
+}
+
+.create-task-btn{
+    padding: 10px 20px; 
+    font-weight: bold;
+    color: #FAFAFA;
+    background-color: #00243C;
+    border: none;
+    border-radius: 10px;
 }
